k8s/ingress/ingress-and-service-editit-accordingly.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: riyan
  name: vproweb-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vproweb
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: riyan
  name: vproweb
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
